--- a/src/view/contains/SanPhamJpanel.form
+++ b/src/view/contains/SanPhamJpanel.form
@@ -683,6 +683,9 @@
                           <Image iconType="3" name="/icon/Add.png"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton7ActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel48">
                       <Properties>
